--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/sklearn/sklearn_fix_version.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/sklearn/sklearn_fix_version.ipynb
@@ -46,6 +46,7 @@
    "source": [
     "import textwrap\n",
     "import sklearn\n",
+    "from importlib import reload\n",
     "from exasol.nb_connector.connections import open_pyexasol_connection\n",
     "\n",
     "# Create script to test the model\n",
@@ -69,13 +70,15 @@
     "    print(f\"AI-Lab scikit-learn version {my_version} is identical to that of the SLC.\\nNothing to do.\")\n",
     "else:\n",
     "    print(f\"AI-Lab scikit-learn version {my_version} differs from SLC.\\nInstalling version {slc_version} ...\")\n",
-    "    %pip install \"scikit_learn=={slc_version}\""
+    "    %pip install \"scikit_learn=={slc_version}\"\n",
+    "    sklearn = reload(sklearn)\n",
+    "    print(f\"Updated AI-Lab scikit-learn to version {sklearn.__version__}.\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33a2b545-c7fb-43a3-9113-ac3fe04eb68f",
+   "id": "508f5d2e-ecd7-4ef4-afd0-5f97e51ea2ae",
    "metadata": {},
    "outputs": [],
    "source": []
