Fixed sk_train to remove feature labels

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/sklearn/sklearn_train_telescope.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/sklearn/sklearn_train_telescope.ipynb
@@ -91,7 +91,7 @@
     "\n",
     "# Create and train the model.\n",
     "model = tree.DecisionTreeClassifier()\n",
-    "model.fit(X_train, y_train)\n",
+    "model.fit(X_train.values, y_train)\n",
     "\n",
     "print(f\"Training took: {stopwatch}\")"
    ]
