--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/sklearn/sklearn_fix_version.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/sklearn/sklearn_fix_version.ipynb
@@ -13,7 +13,7 @@
     "\n",
     "Using identical versions is required when transferring the sklearn model from the AI-Lab to the database SLC.\n",
     "\n",
-    "The AI-Lab serializes the sklearn model and uploads it into the database SLC. The SLC can only _deserialize_ the model if using the same version of the `scikit-learn` library. The specific version of the library used by the SLC depends on the release version of the database and cannot be controlled by the AI-Lab. Claiming to be intelligent, the AI-Lab adapts its own version of the library if required.\n",
+    "The AI-Lab serializes the sklearn model and uploads it into the database SLC. The SLC can only _deserialize_ the model if using the same version of the `scikit-learn` library. The specific version of the library used by the default SLC depends on the release version of the database and cannot be controlled by the AI-Lab. Running the following script will update the version of the library used in the AI-Lab, if required.\n",
     "\n",
     "## Open Secure Configuration Storage"
    ]
@@ -34,7 +34,11 @@
    "id": "055ed302-69aa-426c-b5ec-861c63b82d33",
    "metadata": {},
    "source": [
-    "## Detect Versions and Update Installation if Required"
+    "## Detect the Version of sklearn Used in the SLC\n",
+    "\n",
+    "The following cell creates a User Defined Function (UDF) called `detect_skikit_learn_version()` to be run in the SLC and then executes the UDF via an SQL statement.\n",
+    "\n",
+    "The UDF inquires and returns the version of sklearn installed in the SLC which is then stored in variable `slc_version`."
    ]
   },
   {
@@ -62,8 +66,26 @@
     "    query_params={'schema': ai_lab_config.db_schema}\n",
     "    conn.execute(sql, query_params)\n",
     "    result = conn.execute(\"select {schema!q}.detect_skikit_learn_version()\", query_params).fetchone()\n",
-    "    slc_version = result[0]\n",
+    "    slc_version = result[0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e4b0dc24-6e02-4305-8fa1-15f68afac360",
+   "metadata": {},
+   "source": [
+    "## Compare the Version and Update the AI-Lab if Required\n",
     "\n",
+    "The next cell compares the version returned by the UDF with the version in the AI-Lab environment. If they differ, then the cell installs the UDF's version in the AI-Lab environment."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "50b88871-4c37-4cc1-ac85-841a22e98153",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "my_version = sklearn.__version__\n",
     "\n",
     "if slc_version == my_version:\n",
@@ -78,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "508f5d2e-ecd7-4ef4-afd0-5f97e51ea2ae",
+   "id": "b0ea6891-d171-4841-a2d8-edf8ac252d86",
    "metadata": {},
    "outputs": [],
    "source": []
