Fixed review findings in notebook text

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/sklearn/sklearn_fix_version.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/sklearn/sklearn_fix_version.ipynb
@@ -7,13 +7,15 @@
    "source": [
     "# Fix the Version of Python Library Scikit-learn\n",
     "\n",
-    "This notebook ensures the AI-Lab using the same version of python library `scikit-learn` as the one used by the <a href=\"https://docs.exasol.com/db/latest/database_concepts/udf_scripts/adding_new_packages_script_languages.htm\" target=\"_blank\" rel=\"noopener\">Script Language Container (SLC)</a> inside Exasol database.\n",
+    "This notebook ensures the AI-Lab is using the same version of the python library `scikit-learn` as the one used by the built-in [Script Language Container (SLC)](https://docs.exasol.com/db/latest/database_concepts/udf_scripts/adding_new_packages_script_languages.htm#ScriptLanguageContainer) inside the Exasol database.\n",
     "\n",
     "## Rationale\n",
     "\n",
-    "Using identical versions is required when transferring the sklearn model from the AI-Lab to the database SLC.\n",
+    "Using identical versions is required when transferring the Scikit-learn model from the AI-Lab to the database SLC.\n",
     "\n",
-    "The AI-Lab serializes the sklearn model and uploads it into the database SLC. The SLC can only _deserialize_ the model if using the same version of the `scikit-learn` library. The specific version of the library used by the default SLC depends on the release version of the database and cannot be controlled by the AI-Lab. Running the following script will update the version of the library used in the AI-Lab, if required.\n",
+    "The AI-Lab serializes the Scikit-learn model with [pickle](https://docs.python.org/3/library/pickle.html) and uploads it into the BucketFS of the database. The UDF using the built-in SLC can only _deserialize_ the model if it is using the same version of Scikit-learn as was used for serializing it. The specific version of the library available in the built-in SLC depends on the release version of the database and cannot be controlled by the AI-Lab.\n",
+    "\n",
+    "Running the following script will update the version of the library used in the AI-Lab, if required.\n",
     "\n",
     "## Open Secure Configuration Storage"
    ]
@@ -34,11 +36,11 @@
    "id": "055ed302-69aa-426c-b5ec-861c63b82d33",
    "metadata": {},
    "source": [
-    "## Detect the Version of sklearn Used in the SLC\n",
+    "## Detect the Version of Scikit-learn Used in the SLC\n",
     "\n",
-    "The following cell creates a User Defined Function (UDF) called `detect_skikit_learn_version()` to be run in the SLC and then executes the UDF via an SQL statement.\n",
+    "The following cell creates a User Defined Function (UDF) called `detect_scikit_learn_version()` and then executes the UDF using the built-in SLC via an SQL statement.\n",
     "\n",
-    "The UDF inquires and returns the version of sklearn installed in the SLC which is then stored in variable `slc_version`."
+    "The UDF inquires and returns the version of Scikit-learn available in the built-in SLC which is then stored in variable `slc_scikit_learn_version`."
    ]
   },
   {
@@ -49,13 +51,10 @@
    "outputs": [],
    "source": [
     "import textwrap\n",
-    "import sklearn\n",
-    "from importlib import reload\n",
     "from exasol.nb_connector.connections import open_pyexasol_connection\n",
     "\n",
-    "# Create script to test the model\n",
     "sql = textwrap.dedent(\"\"\"\n",
-    "CREATE OR REPLACE PYTHON3 SCALAR SCRIPT {schema!q}.detect_skikit_learn_version() RETURNS VARCHAR(100) AS\n",
+    "CREATE OR REPLACE PYTHON3 SCALAR SCRIPT {schema!q}.detect_scikit_learn_version() RETURNS VARCHAR(100) AS\n",
     "import sklearn\n",
     "def run(ctx):\n",
     "    return sklearn.__version__ \n",
@@ -65,8 +64,8 @@
     "with open_pyexasol_connection(ai_lab_config, compression=True) as conn:\n",
     "    query_params={'schema': ai_lab_config.db_schema}\n",
     "    conn.execute(sql, query_params)\n",
-    "    result = conn.execute(\"select {schema!q}.detect_skikit_learn_version()\", query_params).fetchone()\n",
-    "    slc_version = result[0]"
+    "    result = conn.execute(\"select {schema!q}.detect_scikit_learn_version()\", query_params).fetchone()\n",
+    "    slc_scikit_learn_version = result[0]"
    ]
   },
   {
@@ -74,9 +73,9 @@
    "id": "e4b0dc24-6e02-4305-8fa1-15f68afac360",
    "metadata": {},
    "source": [
-    "## Compare the Version and Update the AI-Lab if Required\n",
+    "## Compare the Scikit-learn Version and Update the AI-Lab if Required\n",
     "\n",
-    "The next cell compares the version returned by the UDF with the version in the AI-Lab environment. If they differ, then the cell installs the UDF's version in the AI-Lab environment."
+    "The next cell compares the Scikit-learn version returned by the UDF with the Scikit-learn version in the AI-Lab environment. If they differ, then the cell installs the UDF's Scikit-learn version in the AI-Lab environment."
    ]
   },
   {
@@ -86,13 +85,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import sklearn\n",
+    "from importlib import reload\n",
+    "\n",
     "my_version = sklearn.__version__\n",
     "\n",
-    "if slc_version == my_version:\n",
+    "if slc_scikit_learn_version == my_version:\n",
     "    print(f\"AI-Lab scikit-learn version {my_version} is identical to that of the SLC.\\nNothing to do.\")\n",
     "else:\n",
-    "    print(f\"AI-Lab scikit-learn version {my_version} differs from SLC.\\nInstalling version {slc_version} ...\")\n",
-    "    %pip install \"scikit_learn=={slc_version}\"\n",
+    "    print(f\"AI-Lab scikit-learn version {my_version} differs from SLC.\\nInstalling version {slc_scikit_learn_version} ...\")\n",
+    "    %pip install \"scikit_learn=={slc_scikit_learn_version}\"\n",
     "    sklearn = reload(sklearn)\n",
     "    print(f\"Updated AI-Lab scikit-learn to version {sklearn.__version__}.\")"
    ]
