--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/sklearn/sklearn_introduction.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/sklearn/sklearn_introduction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c2aa3433-eb40-495e-a80e-38ab0bee10cf",
+   "id": "c7b3a9b5-1b5f-4613-bd8d-6c14f00af33e",
    "metadata": {},
    "source": [
     "# Introduction\n",
@@ -16,9 +16,10 @@
     "## Prerequisites\n",
     "\n",
     "Before using this set of notebooks the following steps need to be completed:\n",
-    "1. [Configure the AI-Lab](../main_config.ipynb).\n",
-    "2. [Load the MAGIC Gamma Telescope data](../data/data_telescope.ipynb).\n",
-    "3. [Load the Abalone data](../data/data_abalone.ipynb).\n",
+    "1. [Configure the AI-Lab](../main_config.ipynb)\n",
+    "2. [Fix the Version of Python Library Scikit-learn](./sklearn_fix_version.ipynb)\n",
+    "3. [Load the MAGIC Gamma Telescope data](../data/data_telescope.ipynb)\n",
+    "4. [Load the Abalone data](../data/data_abalone.ipynb)\n",
     "\n",
     "## Content\n",
     "\n",
@@ -58,7 +59,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
