#317 Updated TE notebooks

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/te_init.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/te_init.ipynb
@@ -78,13 +78,13 @@
    "source": [
     "from exasol.nb_connector.transformers_extension_wrapper import initialize_te_extension\n",
     "\n",
-    "initialize_te_extension(ai_lab_config)"
+    "initialize_te_extension(ai_lab_config, version='2.0.0')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c05bb67d-a5fc-4a46-9fe5-a0c701f42c1c",
+   "id": "94e4f62a-b37f-4bdd-ba96-f0719ed171d3",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -106,7 +106,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
