--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/text_generation.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/text_generation.ipynb
@@ -73,7 +73,7 @@
    "outputs": [],
    "source": [
     "%run utils/model_retrieval.ipynb\n",
-    "load_huggingface_model(ai_lab_config, MODEL_NAME)"
+    "load_huggingface_model(ai_lab_config, MODEL_NAME, 'text_generation')"
    ]
   },
   {
@@ -155,7 +155,6 @@
     "SELECT {ai_lab_config.db_schema}.TE_TEXT_GENERATION_UDF(\n",
     "    NULL,\n",
     "    '{ai_lab_config.te_bfs_connection}',\n",
-    "    '{ai_lab_config.te_hf_connection}',\n",
     "    '{ai_lab_config.te_models_bfs_dir}',\n",
     "    '{MODEL_NAME}',\n",
     "    '{MY_TEXT}',\n",
@@ -191,7 +190,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
