--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/sagemaker/sme_init.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/sagemaker/sme_init.ipynb
@@ -82,7 +82,7 @@
    "source": [
     "from exasol.nb_connector.sagemaker_extension_wrapper import initialize_sme_extension\n",
     "\n",
-    "initialize_sme_extension(ai_lab_config)"
+    "initialize_sme_extension(ai_lab_config, version='0.10.0')"
    ]
   },
   {
@@ -110,7 +110,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
