--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/masked_modelling.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/masked_modelling.ipynb
@@ -91,7 +91,7 @@
    "outputs": [],
    "source": [
     "%run utils/model_retrieval.ipynb\n",
-    "load_huggingface_model(ai_lab_config, MODEL_NAME)"
+    "load_huggingface_model(ai_lab_config, MODEL_NAME, 'filling_mask')"
    ]
   },
   {
@@ -147,7 +147,6 @@
     "    SELECT TE_FILLING_MASK_UDF(\n",
     "        NULL,\n",
     "        '{{ai_lab_config.te_bfs_connection}}',\n",
-    "        '{{ai_lab_config.te_hf_connection}}',\n",
     "        '{{ai_lab_config.te_models_bfs_dir}}',\n",
     "        '{{MODEL_NAME}}',\n",
     "        '{{MY_TEXT}}',\n",
@@ -176,7 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "851eadbc-a8fb-4ddf-bdda-4f4016ed0913",
+   "id": "00934fda-f64e-45f4-9686-c37cf34ea500",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -198,7 +197,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
