#322: Made URL in IBIS notebook point to new example data bucket

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/data/utils/flight_utils.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/data/utils/flight_utils.ipynb
@@ -57,7 +57,7 @@
     "def _import_from_cloudfront(conf: Secrets, file_name: str, transform, table_name: str) -> None:\n",
     "\n",
     "    # Read requested csv file from the cloudfront\n",
-    "    response = requests.get(f'https://d1je7p5oh8pade.cloudfront.net/{file_name}')\n",
+    "    response = requests.get(f'https://dut5tonqye28.cloudfront.net/ai_lab/flight-info/{file_name}')\n",
     "    response.raise_for_status()\n",
     "    content_stream = io.BytesIO(response.content)\n",
     "    f_src = io.TextIOWrapper(content_stream, encoding='utf-8')\n",
