--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/cloud_store_config.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/cloud_store_config.ipynb
@@ -2,6 +2,10 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "5d878fcbb2f8481d",
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "# Cloud Storage Extension Configuration\n",
     "\n",
@@ -12,43 +16,44 @@
     "* retrieves latest release of cloud-storage-extension jar\n",
     "* uploads it into [BucketFS](https://docs.exasol.com/db/latest/database_concepts/bucketfs/bucketfs.htm)\n",
     "* registers UDF scripts for the cloud-storage-extension"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "5d878fcbb2f8481d"
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "## Cloud Storage Extension setup"
-   ],
+   "id": "eddf3fc3c79fa4ef",
    "metadata": {
     "collapsed": false
    },
-   "id": "eddf3fc3c79fa4ef"
+   "source": [
+    "## Cloud Storage Extension setup"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "a86f5b8661854f35",
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "from exasol.nb_connector import github, bfs_utils, cloud_storage\n",
     "from exasol.nb_connector.connections import open_bucketfs_connection, open_pyexasol_connection\n",
+    "from exasol.bucketfs.path import BucketPath\n",
+    "import pathlib\n",
     "\n",
     "jar_local_path = github.retrieve_jar(github.Project.CLOUD_STORAGE_EXTENSION, use_local_cache=True)\n",
-    "bfs_bucket = open_bucketfs_connection(ai_lab_config)\n",
-    "bfs_path = bfs_utils.put_file(bfs_bucket, jar_local_path)\n",
+    "local_name = jar_local_path.name\n",
+    "bfs_path = BucketPath(open_bucketfs_connection(ai_lab_config)) / local_name\n",
+    "with jar_local_path.open(\"rb\") as file:\n",
+    "    bfs_path.write(file)\n",
+    "udf_path = bfs_path.as_udf_path()\n",
     "\n",
     "with open_pyexasol_connection(ai_lab_config) as conn:\n",
-    "    cloud_storage.setup_scripts(conn, ai_lab_config.db_schema, bfs_path)\n",
+    "    cloud_storage.setup_scripts(conn, ai_lab_config.db_schema, udf_path)\n",
     "    \n",
     "print(\"Could Storage Extension was initialized\")"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "a86f5b8661854f35"
+   ]
   }
  ],
  "metadata": {
