--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/cloud/cloud_store_config.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/cloud/cloud_store_config.ipynb
@@ -4,7 +4,10 @@
    "cell_type": "markdown",
    "id": "5d878fcbb2f8481d",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "source": [
     "# Cloud Storage Extension Configuration\n",
@@ -22,7 +25,10 @@
    "cell_type": "markdown",
    "id": "eddf3fc3c79fa4ef",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "source": [
     "## Cloud Storage Extension setup"
@@ -33,18 +39,21 @@
    "execution_count": null,
    "id": "a86f5b8661854f35",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [],
    "source": [
     "from exasol.nb_connector import github, bfs_utils, cloud_storage\n",
     "from exasol.nb_connector.connections import open_bucketfs_connection, open_pyexasol_connection\n",
-    "from exasol.bucketfs.path import BucketPath\n",
+    "import exasol.bucketfs as bfs\n",
     "import pathlib\n",
     "\n",
     "jar_local_path = github.retrieve_jar(github.Project.CLOUD_STORAGE_EXTENSION, use_local_cache=True)\n",
     "local_name = jar_local_path.name\n",
-    "bfs_path = BucketPath(open_bucketfs_connection(ai_lab_config)) / local_name\n",
+    "bfs_path = bfs.path.BucketPath(local_name, open_bucketfs_connection(ai_lab_config))\n",
     "with jar_local_path.open(\"rb\") as file:\n",
     "    bfs_path.write(file)\n",
     "udf_path = bfs_path.as_udf_path()\n",
@@ -58,21 +67,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
