Fix CSE notebook[CodeBuild]

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/cloud/01_import_data.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/cloud/01_import_data.ipynb
@@ -86,7 +86,7 @@
    },
    "outputs": [],
    "source": [
-    "%run ../cloud_store_config.ipynb"
+    "%run ./cloud_store_config.ipynb"
    ]
   },
   {
@@ -324,19 +324,6 @@
     "        print(row)\n",
     "    "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d2316eb463532aa1",
-   "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
