#326 Fixed few deficiencies

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/sklearn/sklearn_predict_udf.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/sklearn/sklearn_predict_udf.ipynb
@@ -93,7 +93,7 @@
     "        # Call the model to get the predictions. Omit the first column in the input\n",
     "        # which holds the sample IDs.\n",
     "        df_features = X_pred.drop(X_pred.columns[0], axis=1)\n",
-    "        y_pred = model.predict(df_features)\n",
+    "        y_pred = model.predict(df_features.values)\n",
     "\n",
     "        # Combine predictions with the sample IDs.\n",
     "        df_rowid = X_pred[X_pred.columns[0]].reset_index(drop=True)\n",
