--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/sklearn/sklearn_train_telescope.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/sklearn/sklearn_train_telescope.ipynb
@@ -91,7 +91,7 @@
     "\n",
     "# Create and train the model.\n",
     "model = tree.DecisionTreeClassifier()\n",
-    "model.fit(X_train.values, y_train)\n",
+    "model.fit(X_train.values, y_train.values)\n",
     "\n",
     "print(f\"Training took: {stopwatch}\")"
    ]
@@ -118,7 +118,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# Make the predictions on the validation set.\n",
-    "y_pred = model.predict(X_valid)\n",
+    "y_pred = model.predict(X_valid.values)\n",
     "\n",
     "# Build and display the confusion matrix.\n",
     "cm = confusion_matrix(y_valid, y_pred, labels=model.classes_)\n",
