--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/utils/main_config_ui.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/utils/main_config_ui.ipynb
@@ -104,7 +104,7 @@
     "\n",
     "    inputs = [\n",
     "        [\n",
-    "            ('Host Name', widgets.Text(value=conf.get(CKey.db_host_name, '127.0.0.1')), CKey.db_host_name),\n",
+    "            ('Host Name', widgets.Text(value=conf.get(CKey.db_host_name, 'localhost')), CKey.db_host_name),\n",
     "            ('Port', widgets.IntText(value=int(conf.get(CKey.db_port, '8563'))), CKey.db_port),\n",
     "            ('User Name', widgets.Text(value=conf.get(CKey.db_user)), CKey.db_user),\n",
     "            ('Password', widgets.Password(value=conf.get(CKey.db_password)), CKey.db_password),\n",
@@ -113,8 +113,10 @@
     "                CKey.db_encryption)\n",
     "        ],\n",
     "        [\n",
-    "            ('Host Name', widgets.Text(value=conf.get(CKey.bfs_host_name, '127.0.0.1')), CKey.bfs_host_name),\n",
-    "            ('Port', widgets.IntText(value=int(conf.get(CKey.bfs_port, '2580'))), CKey.bfs_port),\n",
+    "            ('External Host Name', widgets.Text(value=conf.get(CKey.bfs_host_name, 'localhost')), CKey.bfs_host_name),\n",
+    "            ('Internal Host Name', widgets.Text(value=conf.get(CKey.bfs_host_name, 'localhost')), CKey.bfs_internal_host_name),\n",
+    "            ('External Port', widgets.IntText(value=int(conf.get(CKey.bfs_port, '2580'))), CKey.bfs_port),\n",
+    "            ('Internal Port', widgets.IntText(value=int(conf.get(CKey.bfs_port, '2580'))), CKey.bfs_internal_port),\n",
     "            ('User Name', widgets.Text(value=conf.get(CKey.bfs_user)), CKey.bfs_user),\n",
     "            ('Password', widgets.Password(value=conf.get(CKey.bfs_password)), CKey.bfs_password),\n",
     "            ('Service Name', widgets.Text(value=conf.get(CKey.bfs_service, 'bfsdefault')), CKey.bfs_service),\n",
