Hotfix for SLC Notebooks

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/script_languages_container/configure_slc_repository.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/script_languages_container/configure_slc_repository.ipynb
@@ -179,6 +179,30 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "8a9ce899-6ca5-46d7-a6d0-faba5654e5b9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "''"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from git import Repo\n",
+    "slc_dir = ai_lab_config.get(AILabConfig.slc_target_dir)\n",
+    "repo = Repo(path=slc_dir)\n",
+    "repo.git.checkout(\"--recurse-submodules\", \"8.2.0\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "53997bff-b4be-406f-b54f-ae9f39939ede",
    "metadata": {},
