#339 Improved reporting of the ITDE errors

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/utils/main_config_ui.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/utils/main_config_ui.ipynb
@@ -43,6 +43,7 @@
     "from exasol.nb_connector.ai_lab_config import AILabConfig as CKey, StorageBackend\n",
     "from exasol.nb_connector.itde_manager import (bring_itde_up, get_itde_status, restart_itde, take_itde_down, ItdeContainerStatus)\n",
     "from exasol.nb_connector.connections import get_backend\n",
+    "from exasol_integration_test_docker_environment.lib.api.api_errors import TaskFailures, TaskRuntimeError\n",
     "\n",
     "\n",
     "class ITDEStatus(Enum):\n",
@@ -196,6 +197,19 @@
     "        return get_onprem_db_config_ui(conf)\n",
     "\n",
     "\n",
+    "def _itde_error_message(header: str, e: Exception) -> str:\n",
+    "    if isinstance(e, TaskRuntimeError):\n",
+    "        if isinstance(e.__cause__, TaskFailures):\n",
+    "            err_message = f'{e.msg} {e.__cause__}'\n",
+    "        elif e.inner:\n",
+    "            err_message = f'{e.msg} This was caused by {\", \".join(e.inner)}'\n",
+    "        else:\n",
+    "            err_message = e.msg\n",
+    "    else:\n",
+    "        err_message = str(e)\n",
+    "    return f'{header}: {err_message}'\n",
+    "\n",
+    "\n",
     "def _get_docker_db_action_buttons(conf: Secrets, itde_exists: bool, itde_ready: bool, \n",
     "                                   display_status: widgets.Widget) -> List[widgets.Button]:\n",
     "    \"\"\"\n",
@@ -220,7 +234,7 @@
     "            display_status.value = ITDEStatus.ready.value\n",
     "            btn.icon = 'check'\n",
     "        except Exception as e:\n",
-    "             popup_message('Failed to start the Exasol Docker-DB:' + str(e))\n",
+    "             popup_message(_itde_error_message('Failed to start the Exasol Docker-DB', e))\n",
     "       \n",
     "    def restart_docker_db(btn):\n",
     "        try:\n",
@@ -234,7 +248,7 @@
     "            display_status.value = ITDEStatus.ready.value\n",
     "            btn.icon = 'check'\n",
     "        except Exception as e:\n",
-    "             popup_message('Failed to restart the Exasol Docker-DB:' + str(e))\n",
+    "             popup_message(_itde_error_message('Failed to restart the Exasol Docker-DB:', e))\n",
     "\n",
     "    if itde_ready:\n",
     "        btn_restart = widgets.Button(description='Recreate and Start')\n",
