#339 Addressed review comment [CodeBuild]

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/utils/main_config_ui.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/utils/main_config_ui.ipynb
@@ -202,7 +202,8 @@
     "        if isinstance(e.__cause__, TaskFailures):\n",
     "            err_message = f'{e.msg} {e.__cause__}'\n",
     "        elif e.inner:\n",
-    "            err_message = f'{e.msg} This was caused by {\", \".join(e.inner)}'\n",
+    "            causes = '\\n'.join(e.inner)\n",
+    "            err_message = f'{e.msg} This was caused by\\n{causes}'\n",
     "        else:\n",
     "            err_message = e.msg\n",
     "    else:\n",
