--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/cloud/cloud_store_config.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/cloud/cloud_store_config.ipynb
@@ -52,10 +52,9 @@
     "jar_local_path = github.retrieve_jar(github.Project.CLOUD_STORAGE_EXTENSION, use_local_cache=True)\n",
     "bfs_bucket = open_bucketfs_connection(ai_lab_config)\n",
     "bfs_path = bfs_utils.put_file(bfs_bucket, jar_local_path)\n",
-    "udf_path = bfs_path.as_udf_path()\n",
     "\n",
     "with open_pyexasol_connection(ai_lab_config) as conn:\n",
-    "    cloud_storage.setup_scripts(conn, ai_lab_config.db_schema, udf_path)\n",
+    "    cloud_storage.setup_scripts(conn, ai_lab_config.db_schema, bfs_path)\n",
     "    \n",
     "print(\"Could Storage Extension was initialized\")"
    ]
