--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/cloud/cloud_store_config.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/cloud/cloud_store_config.ipynb
@@ -48,13 +48,16 @@
    "source": [
     "from exasol.nb_connector import github, bfs_utils, cloud_storage\n",
     "from exasol.nb_connector.connections import open_bucketfs_connection, open_pyexasol_connection\n",
+    "import exasol.bucketfs as bfs\n",
     "\n",
     "jar_local_path = github.retrieve_jar(github.Project.CLOUD_STORAGE_EXTENSION, use_local_cache=True)\n",
     "bfs_bucket = open_bucketfs_connection(ai_lab_config)\n",
-    "bfs_path = bfs_utils.put_file(bfs_bucket, jar_local_path)\n",
+    "bfs_path_2 = bfs_utils.put_file(bfs_bucket, jar_local_path)\n",
+    "bfs_path = bfs.path.BucketPath(str(jar_local_path), bfs_bucket)\n",
+    "udf_path = bfs_path.as_udf_path()\n",
     "\n",
     "with open_pyexasol_connection(ai_lab_config) as conn:\n",
-    "    cloud_storage.setup_scripts(conn, ai_lab_config.db_schema, bfs_path)\n",
+    "    cloud_storage.setup_scripts(conn, ai_lab_config.db_schema, udf_path)\n",
     "    \n",
     "print(\"Could Storage Extension was initialized\")"
    ]
