--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/cloud/s3_vs_setup.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/cloud/s3_vs_setup.ipynb
@@ -29,7 +29,7 @@
     "# TODO: to be moved into notebook-connector's Project enum\n",
     "import enum\n",
     "\n",
-    "class MyProj:\n",
+    "class MyProj(enum.Enum):\n",
     "    S3_DOCUMENT_VS = \"s3-document-files-virtual-schema\" \n",
     "\n",
     "\n",
